--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
-certifi==2024.12.14
-charset-normalizer==3.4.1
-idna==3.10
+Flask==3.0.0
+Werkzeug==3.0.1
+Jinja2==3.1.3
 pandas==2.2.0
-requests==2.31.0
 pywin32==308
-flask==3.0.0
-urllib3==2.3.0
+openpyxl==3.1.2
+SQLAlchemy==2.0.25
+python-dateutil==2.8.2
+pytz==2024.1
+numpy==1.26.3
+click==8.1.7
+colorama==0.4.6
+itsdangerous==2.1.2
+MarkupSafe==2.1.4
+six==1.16.0
+tzdata==2024.1
